[Add] 액션바 추가 - 아이콘 추가 - 메뉴 선택 시 그리드 타입 변경 처리 - 화면 전환 시 onCreated 호출하지 않도록 수정

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,9 @@
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
     <string name="app_name">ImageGallery</string>
 
+    <string name="looks_one_title">격자로 보기</string>
+    <string name="looks_two_title">크기대로 보기</string>
+
     <string name="toast_network_failed">[<xliff:g id="status_code">%d</xliff:g>] 네트워크 상태 확인 후 앱을 재시작해주세요.</string>
     <string name="toast_image_empty">[<xliff:g id="status_code">%d</xliff:g>] 이미지가 없습니다.</string>
 </resources>
