[Add][네트워크] 타임아웃 설정 및 Exception 발생 시 retry 추가

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,6 @@
     <string name="looks_one_title">격자로 보기</string>
     <string name="looks_two_title">크기대로 보기</string>
 
-    <string name="toast_network_failed">[<xliff:g id="status_code">%d</xliff:g>] 네트워크 상태 확인 후 앱을 재시작해주세요.</string>
-    <string name="toast_image_empty">[<xliff:g id="status_code">%d</xliff:g>] 이미지가 없습니다.</string>
+    <string name="toast_network_failed">[<xliff:g id="status_code">%d</xliff:g>] 네트워크 연결에 실패했어요. 화면을 클릭해 재시도해주세요.</string>
+    <string name="toast_image_empty">[<xliff:g id="status_code">%d</xliff:g>] 이미지가 없어요.</string>
 </resources>
