--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,7 @@
     <string name="looks_one_title">격자로 보기</string>
     <string name="looks_two_title">크기대로 보기</string>
 
+    <string name="toast_network_retry">이미지 불러오기를 재시도합니다.</string>
     <string name="toast_network_failed">[<xliff:g id="status_code">%d</xliff:g>] 네트워크 연결에 실패했어요. 화면을 클릭해 재시도해주세요.</string>
     <string name="toast_image_empty">[<xliff:g id="status_code">%d</xliff:g>] 이미지가 없어요.</string>
 </resources>
